--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>254 Tagged Open Ruby Bugs as of 2024-01-09 09:15:40 +0900</title>
+<title>255 Tagged Open Ruby Bugs as of 2024-01-11 04:51:31 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -11,29 +11,28 @@
 <input type="submit" value="patch" />
 <input type="submit" value="build" />
 <input type="submit" value="regexp" />
-<input type="submit" value="encoding" />
 <input type="submit" value="ext" />
+<input type="submit" value="encoding" />
 <input type="submit" value="cygwin" />
-<input type="submit" value="thread" />
 <input type="submit" value="lib" />
-<input type="submit" value="maybenotbug" />
+<input type="submit" value="thread" />
 <input type="submit" value="test" />
+<input type="submit" value="maybenotbug" />
 <input type="submit" value="perf" />
 <input type="submit" value="parser" />
 <input type="submit" value="fiber" />
 <input type="submit" value="notbug" />
 <input type="submit" value="tracepoint" />
-<input type="submit" value="autoload" />
 <input type="submit" value="coverage" />
+<input type="submit" value="autoload" />
 <input type="submit" value="mnthreads" />
 <input type="submit" value="doc" />
-<input type="submit" value="prism" />
 <input type="submit" value="yjit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">254</span> matched)
+(<span id="matched">255</span> matched)
 <table>
-<caption>254 Tagged Open Ruby Bugs as of 2024-01-09 09:15:40 +0900</caption>
+<caption>255 Tagged Open Ruby Bugs as of 2024-01-11 04:51:31 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +41,41 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/20172">20172</a>
+</td>
+<td>ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20172">Socket.addrinfo failing randomly</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/20171">20171</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20171">ri -i ruby interactive  pressing tab does not autocomplete</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20169">20169</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20169">`GC.compact` can raises `EFAULT` on IO</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/20168">20168</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20168">Process won&#39;t exit when Ractor.select waiting a Ractor</a>
+</td>
+</tr>
+<tr class=" ractor coverage ">
+<td><a href="https://bugs.ruby-lang.org/issues/20167">20167</a>
+</td>
+<td>ractor coverage</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20167">Code execution isn&#39;t recorded in Ractor</a>
+</td>
+</tr>
 <tr class=" ractor ">
 <td><a href="https://bugs.ruby-lang.org/issues/20165">20165</a>
 </td>
@@ -49,31 +83,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/20165">Ractors moving a Struct breaks beyond the first 3 fields</a>
 </td>
 </tr>
-<tr class=" core patch ">
-<td><a href="https://bugs.ruby-lang.org/issues/20162">20162</a>
-</td>
-<td>core patch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20162">Memory leak when duplicating too complex object</a>
-</td>
-</tr>
-<tr class=" core patch ">
-<td><a href="https://bugs.ruby-lang.org/issues/20161">20161</a>
-</td>
-<td>core patch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20161">Memory leak in regexp grapheme clusters</a>
-</td>
-</tr>
-<tr class=" prism maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/20159">20159</a>
-</td>
-<td>prism maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20159">Prism assertion failure even if it is executed with --parser=parse.y</a>
-</td>
-</tr>
-<tr class=" ractor ">
+<tr class=" ractor coverage ">
 <td><a href="https://bugs.ruby-lang.org/issues/20158">20158</a>
 </td>
-<td>ractor</td>
+<td>ractor coverage</td>
 <td><a href="https://bugs.ruby-lang.org/issues/20158">Ractor affects Coverage results</a>
 </td>
 </tr>
@@ -131,13 +144,6 @@
 </td>
 <td>thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/20103">rb_internal_thread_remove_event_hook() hangs when called from within a Thread hook</a>
-</td>
-</tr>
-<tr class=" core patch ">
-<td><a href="https://bugs.ruby-lang.org/issues/20101">20101</a>
-</td>
-<td>core patch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20101">rb_file_open and rb_io_fdopen don&#39;t perform CRLF -&gt; LF conversion when encoding is set</a>
 </td>
 </tr>
 <tr class=" os/arch core ">
